Started working on tabs and plugins

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(VERSION 3.18)
 
 project(xkcc VERSION 1.0.0 LANGUAGES CXX)
 
+find_package(Lua REQUIRED)
 find_package(Qt6 REQUIRED COMPONENTS Core Widgets)
 
 qt_standard_project_setup()
@@ -13,10 +14,12 @@ add_executable(xkcc ${SOURCES})
 target_include_directories(xkcc
     PRIVATE
         ${PROJECT_SOURCE_DIR}/include
+        ${LUA_INCLUDE_DIR}
 )
 
 target_link_libraries(xkcc
     PRIVATE
+        ${LUA_LIBRARIES}
         Qt6::Core
         Qt6::Widgets
 )
